Fixed an issue where firefox would not stretch table cells and events would overflow

--- a/Resources/public/css/BootstrapCalendar.css
+++ b/Resources/public/css/BootstrapCalendar.css
@@ -188,9 +188,7 @@
 }
 
 .calendar-single-event-container {
-    margin: 1px;
-    margin-top: 6px;
-    overflow: hidden;
+
 }
 
 .calendar-single-event, .calendar-multiday-event {
